Functioning App Both Pages
